--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coinluxora User Dashboard</title>
+  <title>Veloci Global Markets User Dashboard</title>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
@@ -685,7 +685,7 @@
       padding:12px 12px;
       border-radius:18px;
       border:1px solid rgba(255,255,255,.10);
-      background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,,255,.03));
+      background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03));
       box-shadow:0 18px 55px rgba(0,0,0,.35);
       margin:10px 0 14px;
       display:flex;align-items:center;justify-content:space-between;gap:12px;
@@ -962,8 +962,8 @@
   <div id="authGate">
     <div class="gateCard">
       <div class="gateLogo">📣</div>
-      <div class="gateTxt">Coinluxora</div>
-      <div class="gateSub">Securing your session…</div>
+      <div class="gateTxt">Veloci Global Markets</div>
+      <div class="gateSub">Precision trading. Real-time execution.</div>
       <div class="spinner"></div>
     </div>
   </div>
@@ -975,7 +975,7 @@
     <div class="sideTop">
       <div class="sideBrand">
         <div class="sideBrandIcon">◈</div>
-        COINLUXORA
+        VELOCI GLOBAL MARKETS
       </div>
       <button class="closeBtn" onclick="closeMenu()">✕</button>
     </div>
@@ -1006,7 +1006,7 @@
     <!-- ✅ STICKY WRAP -->
     <div id="stickyMenu" class="stickyMenu">
       <div class="topRow">
-        <div class="brand"><div class="brandIcon">📣</div>COIN</div>
+        <div class="brand"><div class="brandIcon">📣</div>VGM</div>
         <div class="headerActions">
           <button class="avatarBtn" onclick="goProfile()" title="Profile">
             <span id="avatarFallback" class="avatarFallback">👤</span>
@@ -1921,7 +1921,7 @@
         const { data: row, error } = await supabaseClient.from("users").select("full_name, avatar_url, country").eq("email", currentUserEmail).maybeSingle();
         if(!error && row){ fullName=row.full_name||""; avatarUrl=row.avatar_url||""; countryName=row.country||""; }
 
-        const md=(window.COINLUXORA_USER?.user_metadata||{});
+        const md=(window.VGM_USER?.user_metadata||{});
         if(!fullName) fullName=md.full_name||"User";
         if(!avatarUrl) avatarUrl=md.avatar_url||"";
 
@@ -2388,7 +2388,7 @@
           return;
         }
 
-        window.COINLUXORA_USER=user;
+        window.VGM_USER=user;
         initWithUser(user);
       }catch(e){
         window.location.replace("login.html");
