--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -6,6 +6,22 @@
   <title>Coinluxora User Dashboard</title>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+// ✅ Brand override (Veloci Global Markets)
+(function(){
+  try{
+    document.title = "Veloci Global Markets | User Dashboard";
+
+    const gateTxt = document.querySelector(".gateTxt");
+    if(gateTxt) gateTxt.textContent = "Veloci Global Markets";
+
+    const sideBrand = document.querySelector(".sideBrand");
+    if(sideBrand) sideBrand.innerHTML = `<div class="sideBrandIcon">V</div> VGM`;
+
+    const brand = document.querySelector(".brand");
+    if(brand) brand.innerHTML = `<div class="brandIcon">V</div>VGM`;
+
+  }catch(e){}
+})();
 
   <style>
     :root{
