--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -3,25 +3,9 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coinluxora User Dashboard</title>
+  <title>VGM | User Dashboard</title>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-// ✅ Brand override (Veloci Global Markets)
-(function(){
-  try{
-    document.title = "Veloci Global Markets | User Dashboard";
-
-    const gateTxt = document.querySelector(".gateTxt");
-    if(gateTxt) gateTxt.textContent = "Veloci Global Markets";
-
-    const sideBrand = document.querySelector(".sideBrand");
-    if(sideBrand) sideBrand.innerHTML = `<div class="sideBrandIcon">V</div> VGM`;
-
-    const brand = document.querySelector(".brand");
-    if(brand) brand.innerHTML = `<div class="brandIcon">V</div>VGM`;
-
-  }catch(e){}
-})();
 
   <style>
     :root{
@@ -978,8 +962,8 @@
   <div id="authGate">
     <div class="gateCard">
       <div class="gateLogo">📣</div>
-      <div class="gateTxt">Coinluxora</div>
-      <div class="gateSub">Securing your session…</div>
+      <div class="gateTxt">Veloci Global Markets</div>
+      <div class="gateSub">Precision trading. Real-time execution.</div>
       <div class="spinner"></div>
     </div>
   </div>
@@ -990,8 +974,8 @@
   <div id="sidebar" class="sidebar">
     <div class="sideTop">
       <div class="sideBrand">
-        <div class="sideBrandIcon">◈</div>
-        COINLUXORA
+        <div class="sideBrandIcon">V</div>
+        VGM
       </div>
       <button class="closeBtn" onclick="closeMenu()">✕</button>
     </div>
@@ -1022,7 +1006,7 @@
     <!-- ✅ STICKY WRAP -->
     <div id="stickyMenu" class="stickyMenu">
       <div class="topRow">
-        <div class="brand"><div class="brandIcon">📣</div>COIN</div>
+        <div class="brand"><div class="brandIcon">V</div>VGM</div>
         <div class="headerActions">
           <button class="avatarBtn" onclick="goProfile()" title="Profile">
             <span id="avatarFallback" class="avatarFallback">👤</span>
@@ -2398,14 +2382,8 @@
         const user = data?.user;
         if(error || !user){ window.location.replace("login.html"); return; }
 
-        /* ============================================================
-          ✅ FIXED VERIFIED CHECK (IMPORTANT)
-          Supabase may provide "confirmed_at" rather than "email_confirmed_at"
-        ============================================================ */
-        const confirmed =
-          !!user.email_confirmed_at ||
-          !!user.confirmed_at ||
-          (user.user_metadata && user.user_metadata.email_verified === true);
+        // ✅ FIX: Supabase dashboard shows "confirmed_at" not email_confirmed_at
+        const confirmed = !!(user.email_confirmed_at || user.confirmed_at || user.user_metadata?.email_verified === true);
 
         if(!confirmed){
           await supabaseClient.auth.signOut();
