--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -961,7 +961,7 @@
   <!-- Loading -->
   <div id="authGate">
     <div class="gateCard">
-      <div class="gateLogo">📣</div>
+      <div class="gateLogo">◈</div>
       <div class="gateTxt">Veloci Global Markets</div>
       <div class="gateSub">Precision trading. Real-time execution.</div>
       <div class="spinner"></div>
@@ -1019,7 +1019,7 @@
 
     <div class="helloCard">
       <div class="helloLeft">
-        <div class="helloLogo">💫</div>
+        <div class="helloLogo">◈</div>
         <div>
           <div class="chips">
             <div class="miniChip">🟢 active</div>
