--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -643,16 +643,6 @@
       display:flex;align-items:center;justify-content:space-between;
       gap:10px;margin-bottom:12px;
     }
-    sideBrand{
-      display:flex;align-items:center;gap:10px;
-      font-weight:1000;font-size:16px;letter-spacing:.9px;
-      color:#fff;
-      padding:10px 12px;border-radius:16px;
-      border:1px solid rgba(255,255,255,.10);
-      background:linear-gradient(90deg, rgba(109,87,255,.85), rgba(124,77,255,.85));
-      box-shadow:0 16px 50px rgba(109,87,255,.18);
-      min-width:170px;
-    }
     .sideBrand{
       display:flex;align-items:center;gap:10px;
       font-weight:1000;font-size:16px;letter-spacing:.9px;
@@ -668,6 +658,7 @@
       display:grid;place-items:center;
       background:rgba(255,255,255,.16);
       border:1px solid rgba(255,255,255,.20);
+      font-weight:1000;
     }
     .closeBtn{
       background:rgba(0,0,0,.22);
@@ -961,7 +952,7 @@
   <!-- Loading -->
   <div id="authGate">
     <div class="gateCard">
-      <div class="gateLogo">◈</div>
+      <div class="gateLogo">📣</div>
       <div class="gateTxt">Veloci Global Markets</div>
       <div class="gateSub">Precision trading. Real-time execution.</div>
       <div class="spinner"></div>
@@ -973,9 +964,10 @@
   <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
     <div class="sideTop">
+      <!-- ✅ CHANGED: "VGM" -> "Veloci Markets" AND icon inside box now "◈" -->
       <div class="sideBrand">
-        <div class="sideBrandIcon">V</div>
-        VGM
+        <div class="sideBrandIcon">◈</div>
+        Veloci Markets
       </div>
       <button class="closeBtn" onclick="closeMenu()">✕</button>
     </div>
@@ -1006,7 +998,9 @@
     <!-- ✅ STICKY WRAP -->
     <div id="stickyMenu" class="stickyMenu">
       <div class="topRow">
-        <div class="brand"><div class="brandIcon">V</div>VGM</div>
+        <!-- ✅ CHANGED: top-left icon box now "◈" not "V" -->
+        <div class="brand"><div class="brandIcon">◈</div>VGM</div>
+
         <div class="headerActions">
           <button class="avatarBtn" onclick="goProfile()" title="Profile">
             <span id="avatarFallback" class="avatarFallback">👤</span>
@@ -1019,7 +1013,7 @@
 
     <div class="helloCard">
       <div class="helloLeft">
-        <div class="helloLogo">◈</div>
+        <div class="helloLogo">💫</div>
         <div>
           <div class="chips">
             <div class="miniChip">🟢 active</div>
@@ -2382,7 +2376,6 @@
         const user = data?.user;
         if(error || !user){ window.location.replace("login.html"); return; }
 
-        // ✅ FIX: Supabase dashboard shows "confirmed_at" not email_confirmed_at
         const confirmed = !!(user.email_confirmed_at || user.confirmed_at || user.user_metadata?.email_verified === true);
 
         if(!confirmed){
