--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -116,14 +116,13 @@
 
     /* ✅ Gate logo now image */
     .gateLogo{
-      width:74px;height:74px;border-radius:20px;
+      width:62px;height:62px;border-radius:18px;
       margin:0 auto 10px;
       display:grid;place-items:center;
       border:1px solid rgba(255,255,255,.14);
       background:linear-gradient(180deg, rgba(109,87,255,1), rgba(124,77,255,1));
       box-shadow:0 18px 50px rgba(109,87,255,.28);
       overflow:hidden;
-      padding:8px;
     }
     .gateTxt{font-weight:1000}
     .gateSub{margin-top:6px;color:rgba(234,240,255,.70);font-weight:900;font-size:13px}
@@ -176,25 +175,32 @@
       gap:12px; margin-bottom:14px;
     }
 
-    /* ✅ brand becomes logo-only */
+    /* ============================================================
+      ✅ TOP LOGO STANDS ALONE (NO BOX)
+    ============================================================ */
     .brand{
-      display:flex;align-items:center;gap:0;
-      padding:10px 10px;border-radius:18px;
-      border:1px solid rgba(255,255,255,.14);
-      background:linear-gradient(90deg, rgba(109,87,255,1), rgba(135,116,255,0.86));
-      box-shadow:0 18px 50px rgba(109,87,255,.25);
-      min-width:unset;
-      cursor:pointer;
+      display:flex;
+      align-items:center;
+      gap:10px;
+      padding:0;                 /* removed padding */
+      border:none;               /* removed border */
+      background:transparent;    /* removed gradient box */
+      color:white;
+      font-weight:1000;
+      letter-spacing:.6px;
+      box-shadow:none;           /* removed shadow */
+      min-width:auto;
     }
-
-    /* ✅ top-left icon now larger logo-only */
     .brandIcon{
-      width:50px;height:50px;border-radius:18px;
-      background:rgba(255,255,255,.18);
-      border:1px solid rgba(255,255,255,.22);
+      width:40px;height:40px;border-radius:14px;
+      background:transparent;
+      border:none;
       display:grid;place-items:center;
       overflow:hidden;
-      padding:7px;
+    }
+    .brandIcon img{
+      width:40px;height:40px;object-fit:contain;display:block;
+      filter: drop-shadow(0 14px 30px rgba(109,87,255,.25));
     }
 
     .headerActions{display:flex;gap:10px;align-items:center}
@@ -249,15 +255,20 @@
     }
     .helloLeft{display:flex;align-items:center;gap:12px;}
 
-    /* ✅ hello logo now image holder */
+    /* ============================================================
+      ✅ helloCard icon changed to VERIFIED SHIELD (premium)
+    ============================================================ */
     .helloLogo{
       width:48px;height:48px;border-radius:18px;
-      background:rgba(255,255,255,.20);
+      background:rgba(255,255,255,.22);
       border:1px solid rgba(255,255,255,.22);
       display:grid;place-items:center;
       overflow:hidden;
       font-weight:1000;
+      font-size:22px;
+      box-shadow:0 16px 40px rgba(0,0,0,.18);
     }
+
     .chips{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:6px}
     .miniChip{
       font-size:12px;font-weight:1000;
@@ -664,27 +675,24 @@
       display:flex;align-items:center;justify-content:space-between;
       gap:10px;margin-bottom:12px;
     }
-
-    /* ✅ sidebar brand becomes logo-only */
     .sideBrand{
-      display:flex;align-items:center;gap:0;
+      display:flex;align-items:center;gap:10px;
       font-weight:1000;font-size:16px;letter-spacing:.9px;
       color:#fff;
-      padding:10px 10px;border-radius:18px;
+      padding:10px 12px;border-radius:16px;
       border:1px solid rgba(255,255,255,.10);
       background:linear-gradient(90deg, rgba(109,87,255,.85), rgba(124,77,255,.85));
       box-shadow:0 16px 50px rgba(109,87,255,.18);
-      min-width:unset;
+      min-width:170px;
     }
 
-    /* ✅ sidebar icon now image holder (bigger) */
+    /* ✅ sidebar icon now image holder */
     .sideBrandIcon{
-      width:46px;height:46px;border-radius:18px;
+      width:30px;height:30px;border-radius:12px;
       display:grid;place-items:center;
       background:rgba(255,255,255,.16);
       border:1px solid rgba(255,255,255,.20);
       overflow:hidden;
-      padding:7px;
     }
 
     .closeBtn{
@@ -828,6 +836,7 @@
     .dockItem:hover{background:rgba(255,255,255,.06)}
     .dockActive{color:#9bdcff;background:rgba(56,189,248,.10)}
 
+    /* ✅ keep the center button but as HOME icon (not logo) */
     .dockHome{
       width:78px;height:78px;border-radius:26px;
       background:linear-gradient(180deg, rgba(109,87,255,1), rgba(91,108,255,1));
@@ -839,9 +848,11 @@
       flex:0 0 auto;
       pointer-events:auto;
       overflow:hidden;
+      color:#fff;
+      font-weight:1000;
+      font-size:26px;
     }
     .dockHome:hover{filter:brightness(1.05)}
-    .dockHome img{width:48px;height:48px;object-fit:contain;display:block}
 
     .dockBadge{
       position:absolute;
@@ -984,8 +995,6 @@
       <div class="gateLogo">
         <img class="logoImg" src="assets/vgm-logo.png" alt="Veloci Global Markets Logo">
       </div>
-
-      <!-- ✅ keep full brand name here (LOGICAL) -->
       <div class="gateTxt">Veloci Global Markets</div>
       <div class="gateSub">Precision trading. Real-time execution.</div>
       <div class="spinner"></div>
@@ -998,10 +1007,11 @@
   <div id="sidebar" class="sidebar">
     <div class="sideTop">
       <div class="sideBrand">
-        <!-- ✅ LOGO ONLY (removed redundant brand name text) -->
+        <!-- ✅ LOGO IMPLEMENTED -->
         <div class="sideBrandIcon">
-          <img class="logoImg" src="assets/vgm-logo.png" alt="VGM Logo">
+          <img class="logoImg" src="assets/vgm-logo.png" alt="Veloci Markets Logo">
         </div>
+        Veloci Markets
       </div>
       <button class="closeBtn" onclick="closeMenu()">✕</button>
     </div>
@@ -1031,11 +1041,12 @@
   <div class="container">
     <div id="stickyMenu" class="stickyMenu">
       <div class="topRow">
-        <!-- ✅ LOGO ONLY -->
-        <div class="brand" onclick="goDashboard()" title="Dashboard">
+        <div class="brand">
+          <!-- ✅ LOGO ONLY ONCE (STANDALONE) -->
           <div class="brandIcon">
             <img class="logoImg" src="assets/vgm-logo.png" alt="VGM Logo">
           </div>
+          VGM
         </div>
 
         <div class="headerActions">
@@ -1050,8 +1061,9 @@
 
     <div class="helloCard">
       <div class="helloLeft">
-        <div class="helloLogo">
-          <img class="logoImg" src="assets/vgm-logo.png" alt="VGM Logo">
+        <!-- ✅ VERIFIED SHIELD ICON -->
+        <div class="helloLogo" title="Verified & secured">
+          🛡️
         </div>
 
         <div>
@@ -1207,7 +1219,7 @@
 
   </div>
 
-  <!-- ✅ dock now shows logo -->
+  <!-- ✅ dock center is HOME icon again -->
   <div class="dock">
     <div class="dockInner">
       <div class="dockBar">
@@ -1220,9 +1232,7 @@
           <div class="ico">➡</div><div>Withdraw</div>
         </div>
 
-        <div class="dockHome" onclick="goDashboard()">
-          <img src="assets/vgm-logo.png" alt="VGM Home">
-        </div>
+        <div class="dockHome" onclick="goDashboard()" title="Home">🏠</div>
 
         <div class="dockItem" onclick="goPlans()"><div class="ico">💼</div><div>Plans</div></div>
         <div class="dockItem" onclick="goProfile()"><div class="ico">👤</div><div>Profile</div></div>
