--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -114,9 +114,8 @@
       display:block;
     }
 
-    /* ✅ UPDATED: gate logo 2x bigger (62px → 124px) */
     .gateLogo{
-      width:124px;height:124px;border-radius:24px;
+      width:62px;height:62px;border-radius:18px;
       margin:0 auto 10px;
       display:grid;place-items:center;
       border:1px solid rgba(255,255,255,.14);
@@ -124,7 +123,6 @@
       box-shadow:0 18px 50px rgba(109,87,255,.28);
       overflow:hidden;
     }
-
     .gateTxt{font-weight:1000}
     .gateSub{margin-top:6px;color:rgba(234,240,255,.70);font-weight:900;font-size:13px}
     .spinner{
@@ -187,11 +185,11 @@
       min-width:unset;
     }
 
-    /* ✅ UPDATED: top logo 2x bigger (54px → 108px) */
+    /* ✅ ONLY CHANGE: make top sticky bar logo 2x bigger (NOT the sticky bar itself) */
     .brandLogoWide{
-      height:108px;
+      height:108px;           /* ✅ was 54px (2x bigger logo only) */
       width:auto;
-      max-width:640px;
+      max-width:520px;        /* ✅ allow logo to expand wider */
       display:block;
       object-fit:contain;
       filter:
@@ -199,11 +197,10 @@
         drop-shadow(0 0 22px rgba(91,108,255,.22));
       transform: translateY(1px);
     }
-    /* ✅ UPDATED mobile scaling too (48px → 96px) */
     @media(max-width:520px){
       .brandLogoWide{
-        height:96px;
-        max-width:500px;
+        height:86px;          /* ✅ bigger on small screens too */
+        max-width:360px;
       }
     }
 
@@ -680,11 +677,11 @@
       min-width:unset;
     }
 
-    /* ✅ UPDATED: sidebar logo 2x bigger (64px → 128px) */
+    /* ✅ IMPORTANT: side menu logo stays SAME SIZE (unchanged) */
     .sideLogoWide{
-      height:128px;
+      height:64px;
       width:auto;
-      max-width:260px;
+      max-width:230px;
       display:block;
       object-fit:contain;
       filter:
