--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -173,7 +173,7 @@
       gap:12px; margin-bottom:14px;
     }
 
-    /* ✅ NEW: wide / magnified logo (NO BOX) */
+    /* ✅ wide / magnified logo holder (NO BOX) */
     .brand{
       display:flex;
       align-items:center;
@@ -183,24 +183,30 @@
       background:transparent;
       box-shadow:none;
       min-width:unset;
+      position:relative;
     }
 
-    /* ✅ ONLY CHANGE: make top sticky bar logo 2x bigger (NOT the sticky bar itself) */
+    /* ✅ 4x magnified logo WITHOUT changing sticky bar height */
     .brandLogoWide{
-      height:108px;           /* ✅ was 54px (2x bigger logo only) */
+      height:54px;                 /* ✅ layout height stays normal */
       width:auto;
-      max-width:520px;        /* ✅ allow logo to expand wider */
+      max-width:520px;
       display:block;
       object-fit:contain;
+
+      transform: scale(4);         /* ✅ 4x visual magnification */
+      transform-origin: left center;
+
       filter:
         drop-shadow(0 18px 35px rgba(0,0,0,.55))
         drop-shadow(0 0 22px rgba(91,108,255,.22));
-      transform: translateY(1px);
     }
+
+    /* prevent huge logo from breaking mobile */
     @media(max-width:520px){
       .brandLogoWide{
-        height:86px;          /* ✅ bigger on small screens too */
-        max-width:360px;
+        transform: scale(3);       /* ✅ on tiny screens, 4x may overflow too much */
+        transform-origin: left center;
       }
     }
 
@@ -665,7 +671,7 @@
       gap:10px;margin-bottom:12px;
     }
 
-    /* ✅ NEW sidebar wide logo (NO BOX) */
+    /* ✅ sidebar wide logo (NO BOX) */
     .sideBrand{
       display:flex;
       align-items:center;
