--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -683,13 +683,17 @@
       min-width:unset;
     }
 
-    /* ✅ IMPORTANT: side menu logo stays SAME SIZE (unchanged) */
+    /* ✅ IMPORTANT: side menu logo 3x ONLY (change nothing else) */
     .sideLogoWide{
       height:64px;
       width:auto;
       max-width:230px;
       display:block;
       object-fit:contain;
+
+      transform: scale(3);               /* ✅ 3x sidebar logo */
+      transform-origin: left center;     /* ✅ grow from left */
+
       filter:
         drop-shadow(0 18px 35px rgba(0,0,0,.55))
         drop-shadow(0 0 22px rgba(91,108,255,.18));
