--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -186,7 +186,7 @@
       position:relative;
     }
 
-    /* ✅ 4x magnified logo WITHOUT changing sticky bar height */
+    /* ✅ 2x magnified logo WITHOUT changing sticky bar height */
     .brandLogoWide{
       height:54px;                 /* ✅ layout height stays normal */
       width:auto;
@@ -194,7 +194,7 @@
       display:block;
       object-fit:contain;
 
-      transform: scale(4);         /* ✅ 4x visual magnification */
+      transform: scale(2);         /* ✅ 2x visual magnification */
       transform-origin: left center;
 
       filter:
@@ -205,7 +205,7 @@
     /* prevent huge logo from breaking mobile */
     @media(max-width:520px){
       .brandLogoWide{
-        transform: scale(3);       /* ✅ on tiny screens, 4x may overflow too much */
+        transform: scale(2);       /* ✅ on tiny screens, keep 2x */
         transform-origin: left center;
       }
     }
@@ -683,17 +683,13 @@
       min-width:unset;
     }
 
-    /* ✅ IMPORTANT: side menu logo 3x ONLY (change nothing else) */
+    /* ✅ IMPORTANT: side menu logo stays SAME SIZE (unchanged) */
     .sideLogoWide{
       height:64px;
       width:auto;
       max-width:230px;
       display:block;
       object-fit:contain;
-
-      transform: scale(3);               /* ✅ 3x sidebar logo */
-      transform-origin: left center;     /* ✅ grow from left */
-
       filter:
         drop-shadow(0 18px 35px rgba(0,0,0,.55))
         drop-shadow(0 0 22px rgba(91,108,255,.18));
