--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -194,7 +194,7 @@
       display:block;
       object-fit:contain;
 
-      transform: scale(4);         /* ✅ 4x visual magnification */
+      transform: translateX(-18px) scale(4);   /* ✅ ONLY CHANGE: shift left a bit */
       transform-origin: left center;
 
       filter:
@@ -205,7 +205,7 @@
     /* prevent huge logo from breaking mobile */
     @media(max-width:520px){
       .brandLogoWide{
-        transform: scale(3);       /* ✅ on tiny screens, 4x may overflow too much */
+        transform: translateX(-12px) scale(3); /* ✅ same shift, smaller scale on tiny screens */
         transform-origin: left center;
       }
     }
