--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -194,7 +194,7 @@
       display:block;
       object-fit:contain;
 
-      transform: translateX(-18px) scale(4);   /* ✅ ONLY CHANGE: shift left a bit */
+      transform: scale(4);         /* ✅ 4x visual magnification */
       transform-origin: left center;
 
       filter:
@@ -205,7 +205,7 @@
     /* prevent huge logo from breaking mobile */
     @media(max-width:520px){
       .brandLogoWide{
-        transform: translateX(-12px) scale(3); /* ✅ same shift, smaller scale on tiny screens */
+        transform: scale(3);       /* ✅ on tiny screens, 4x may overflow too much */
         transform-origin: left center;
       }
     }
@@ -305,6 +305,26 @@
       font-weight:1000;font-size:12px;
       color:#fff;
       white-space:nowrap;
+    }
+
+    /* ============================================================
+      ✅ LIVE PRICE STREAM (NEW)
+    ============================================================ */
+    .priceStream{
+      margin-top:12px;
+      border-radius:20px;
+      overflow:hidden;
+      border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.06);
+      box-shadow:0 18px 55px rgba(0,0,0,.35);
+      backdrop-filter: blur(12px);
+    }
+    .priceStreamFrame{
+      width:100%;
+      height:78px; /* matches your screenshot height vibe */
+      border:0;
+      display:block;
+      background:#fff; /* in case widget loads white */
     }
 
     /* ===== BOX ===== */
@@ -683,9 +703,9 @@
       min-width:unset;
     }
 
-    /* ✅ ONLY CHANGE: SIDEBAR LOGO 2X */
+    /* ✅ IMPORTANT: side menu logo stays SAME SIZE (unchanged) */
     .sideLogoWide{
-      height:128px;                 /* ✅ was 64px */
+      height:64px;
       width:auto;
       max-width:230px;
       display:block;
@@ -1067,6 +1087,16 @@
         </div>
         <div class="datetimeChip" id="dateTimeNow">--- | ---</div>
       </div>
+    </div>
+
+    <!-- ✅ LIVE PRICE STREAM RIGHT UNDER HELLO CARD -->
+    <div class="priceStream">
+      <iframe
+        class="priceStreamFrame"
+        loading="lazy"
+        title="Live Market Ticker"
+        src="https://s.tradingview.com/embed-widget/ticker-tape/?locale=en#%7B%22symbols%22%3A%5B%7B%22proName%22%3A%22NYSE%3AIBM%22%2C%22title%22%3A%22IBM%22%7D%2C%7B%22proName%22%3A%22NASDAQ%3AMETA%22%2C%22title%22%3A%22META%22%7D%2C%7B%22proName%22%3A%22NASDAQ%3AAMZN%22%2C%22title%22%3A%22AMZN%22%7D%2C%7B%22proName%22%3A%22NASDAQ%3AAAPL%22%2C%22title%22%3A%22AAPL%22%7D%2C%7B%22proName%22%3A%22NASDAQ%3ANVDA%22%2C%22title%22%3A%22NVDA%22%7D%5D%2C%22showSymbolLogo%22%3Atrue%2C%22colorTheme%22%3A%22light%22%2C%22isTransparent%22%3Afalse%2C%22displayMode%22%3A%22regular%22%2C%22largeChartUrl%22%3A%22%22%2C%22width%22%3A%22100%25%22%2C%22height%22%3A78%7D">
+      </iframe>
     </div>
 
     <div class="balanceCard">
